[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["ZeGmX <lendy.mulot@gmail.com>"]
description = ""
name = "piflouzbot"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
twitch-python = "^0.0.19"
asyncpraw = "^7.5.0"
discord = "^1.7.3"
pyimgur = "^0.6.0"
[tool.poetry.dev-dependencies]
